Fix sync view content overflowing screen

--- a/server/public/sbp.css
+++ b/server/public/sbp.css
@@ -16,7 +16,7 @@
 #sbp-sync-info {
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
+	flex: 1;
 	overflow: hidden;
 }
 
@@ -61,14 +61,16 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
-	flex-grow: 1;
+	flex: 1;
+	overflow: hidden;
 }
 
 #sbp-sync-view {
 	position: relative;
 	flex-direction: column;
 	gap: 1rem;
-	flex-grow: 1;
+	flex: 1;
+	overflow: hidden;
 	width: 16rem;
 	padding-bottom: 1rem;
 
